[package]
name = "dependabot-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
axum = "0.6.4"
serde = "1.0.152"
serde_json = "1.0.91"
hyper-tls = "0.5.0"
